feat(lunatic): loop occurrence pagination