@@ -1,10 +1,13 @@
 package fr.insee.eno.core.processing.out.steps.lunatic.pagination;
 
+import fr.insee.eno.core.model.navigation.StandaloneLoop;
 import fr.insee.eno.core.parameter.LunaticParameters;
 import fr.insee.lunatic.model.flat.*;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
+
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -17,6 +20,7 @@ class LunaticPaginationTest {
     class LoopOnSequence {
 
         private Questionnaire questionnaire;
+        private List<fr.insee.eno.core.model.navigation.Loop> enoLoops;
 
         @BeforeEach
         void createLoopWithSequence() {
@@ -28,22 +32,28 @@ class LunaticPaginationTest {
             Input input2 = new Input();
             input2.setComponentType(ComponentTypeEnum.INPUT);
             Loop loop = new Loop();
+            loop.setId("loop-id");
             loop.setComponentType(ComponentTypeEnum.LOOP);
             loop.setLines(new LinesLoop());
             loop.getComponents().add(sequence);
             loop.getComponents().add(input1);
             loop.getComponents().add(input2);
             questionnaire.getComponents().add(loop);
+
+            fr.insee.eno.core.model.navigation.Loop enoLoop = new StandaloneLoop();
+            enoLoop.setId("loop-id");
+            enoLoop.setOccurrencePagination(false);
+            enoLoops = List.of(enoLoop);
         }
 
         @Test
         void questionMode() {
             //
-            new LunaticAddPageNumbers(LunaticParameters.LunaticPaginationMode.QUESTION).apply(questionnaire);
+            new LunaticAddPageNumbers(LunaticParameters.LunaticPaginationMode.QUESTION, enoLoops).apply(questionnaire);
             //
             assertEquals("question", questionnaire.getPaginationEnum().value());
             assertEquals("1", questionnaire.getMaxPage());
-            Loop loop = (Loop) questionnaire.getComponents().get(0);
+            Loop loop = (Loop) questionnaire.getComponents().getFirst();
             assertFalse(loop.getPaginatedLoop());
             // Non paginated loops don't have a "max page" property
             assertNull(loop.getMaxPage());
@@ -55,11 +65,11 @@ class LunaticPaginationTest {
         @Test
         void sequenceMode() {
             //
-            new LunaticAddPageNumbers(LunaticParameters.LunaticPaginationMode.SEQUENCE).apply(questionnaire);
+            new LunaticAddPageNumbers(LunaticParameters.LunaticPaginationMode.SEQUENCE, enoLoops).apply(questionnaire);
             //
             assertEquals("sequence", questionnaire.getPaginationEnum().value());
             assertEquals("1", questionnaire.getMaxPage());
-            Loop loop = (Loop) questionnaire.getComponents().get(0);
+            Loop loop = (Loop) questionnaire.getComponents().getFirst();
             assertTrue(loop.getPaginatedLoop());
             // Paginated loops have a "max page"
             assertEquals("1", loop.getMaxPage());
@@ -73,6 +83,7 @@ class LunaticPaginationTest {
     class LoopOnTwoSequences {
 
         private Questionnaire questionnaire;
+        private List<fr.insee.eno.core.model.navigation.Loop> enoLoops;
 
         @BeforeEach
         void createLoopWithTwoSequences() {
@@ -86,6 +97,7 @@ class LunaticPaginationTest {
             Input input2 = new Input();
             input2.setComponentType(ComponentTypeEnum.INPUT);
             Loop loop = new Loop();
+            loop.setId("loop-id");
             loop.setComponentType(ComponentTypeEnum.LOOP);
             loop.setLines(new LinesLoop());
             loop.getComponents().add(sequence1);
@@ -93,16 +105,21 @@ class LunaticPaginationTest {
             loop.getComponents().add(sequence2);
             loop.getComponents().add(input2);
             questionnaire.getComponents().add(loop);
+
+            fr.insee.eno.core.model.navigation.Loop enoLoop = new StandaloneLoop();
+            enoLoop.setId("loop-id");
+            enoLoop.setOccurrencePagination(false);
+            enoLoops = List.of(enoLoop);
         }
 
         @Test
         void questionMode() {
             //
-            new LunaticAddPageNumbers(LunaticParameters.LunaticPaginationMode.QUESTION).apply(questionnaire);
+            new LunaticAddPageNumbers(LunaticParameters.LunaticPaginationMode.QUESTION, enoLoops).apply(questionnaire);
             //
             assertEquals("question", questionnaire.getPaginationEnum().value());
             assertEquals("1", questionnaire.getMaxPage());
-            Loop loop = (Loop) questionnaire.getComponents().get(0);
+            Loop loop = (Loop) questionnaire.getComponents().getFirst();
             assertFalse(loop.getPaginatedLoop());
             // Non paginated loops don't have a "max page" property
             assertNull(loop.getMaxPage());
@@ -114,11 +131,11 @@ class LunaticPaginationTest {
         @Test
         void sequenceMode() {
             //
-            new LunaticAddPageNumbers(LunaticParameters.LunaticPaginationMode.SEQUENCE).apply(questionnaire);
+            new LunaticAddPageNumbers(LunaticParameters.LunaticPaginationMode.SEQUENCE, enoLoops).apply(questionnaire);
             //
             assertEquals("sequence", questionnaire.getPaginationEnum().value());
             assertEquals("1", questionnaire.getMaxPage());
-            Loop loop = (Loop) questionnaire.getComponents().get(0);
+            Loop loop = (Loop) questionnaire.getComponents().getFirst();
             assertTrue(loop.getPaginatedLoop());
             // Paginated loops have a "max page"
             assertEquals("2", loop.getMaxPage());
@@ -135,6 +152,7 @@ class LunaticPaginationTest {
     class LoopOnSequenceMinMaxEquals {
 
         private Questionnaire questionnaire;
+        private List<fr.insee.eno.core.model.navigation.Loop> enoLoops;
 
         @BeforeEach
         void createLoopWithSequence() {
@@ -144,6 +162,7 @@ class LunaticPaginationTest {
             Input input1 = new Input();
             input1.setComponentType(ComponentTypeEnum.INPUT);
             Loop loop = new Loop();
+            loop.setId("loop-id");
             loop.setComponentType(ComponentTypeEnum.LOOP);
             LinesLoop linesLoop = new LinesLoop();
             LabelType minMax = new LabelType();
@@ -155,15 +174,20 @@ class LunaticPaginationTest {
             loop.getComponents().add(sequence);
             loop.getComponents().add(input1);
             questionnaire.getComponents().add(loop);
+
+            fr.insee.eno.core.model.navigation.Loop enoLoop = new StandaloneLoop();
+            enoLoop.setId("loop-id");
+            enoLoop.setOccurrencePagination(false);
+            enoLoops = List.of(enoLoop);
         }
 
         @Test
         void questionMode() {
             //
-            new LunaticAddPageNumbers(LunaticParameters.LunaticPaginationMode.QUESTION).apply(questionnaire);
+            new LunaticAddPageNumbers(LunaticParameters.LunaticPaginationMode.QUESTION, enoLoops).apply(questionnaire);
             //
             assertEquals("question", questionnaire.getPaginationEnum().value());
-            Loop loop = (Loop) questionnaire.getComponents().get(0);
+            Loop loop = (Loop) questionnaire.getComponents().getFirst();
             assertFalse(loop.getPaginatedLoop());
             assertNotNull(loop.getLines());
             assertNull(loop.getIterations());
@@ -176,10 +200,10 @@ class LunaticPaginationTest {
         @Test
         void sequenceMode() {
             //
-            new LunaticAddPageNumbers(LunaticParameters.LunaticPaginationMode.SEQUENCE).apply(questionnaire);
+            new LunaticAddPageNumbers(LunaticParameters.LunaticPaginationMode.SEQUENCE, enoLoops).apply(questionnaire);
             //
             assertEquals("sequence", questionnaire.getPaginationEnum().value());
-            Loop loop = (Loop) questionnaire.getComponents().get(0);
+            Loop loop = (Loop) questionnaire.getComponents().getFirst();
             assertTrue(loop.getPaginatedLoop());
             // Paginated loops have a "max page"
             assertNull(loop.getLines());
